# configtpl

./: .gitignore  Cargo.toml  README.md  cbindgen.toml
docs/examples/c/00_simple/: Makefile  README.md  build.bat  main.c
include/: README.md  configtpl.h
src/: config_builder.rs  lib.rs  types.rs  yaml.rs
src/ffi/types/: collections.rs  mod.rs
src/ffi/utils/: strings.rs
src/shared_lib/: extern_fns.rs  mod.rs
src/shared_lib/extern_functions/: config_builder.rs  lib_lifecycle.rs  mod.rs
src/shared_lib/ffi/types/: collections.rs  config_builder.rs  config_param.rs  lib_types.rs  mod.rs  std_types.rs
src/shared_lib/ffi/utils/: strings.rs
src/types/: config_builder.rs  config_param.rs  mod.rs
tests/: config1.yaml  integration_test.rs  t000_simple_test.rs
