[package]
name = "configtpl"
version = "0.1.0"
edition = "2024"

description = "A configuration library which uses Jinja + YAML to render the configuration values."
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
libc = {version = "0.2.175", optional = true}
minijinja = "2.12.0"
serde = "1.0.226"
yaml-rust = "0.4.5"

[features]
default = []
shared_lib = ["dep:libc"]
